# hiroleague

./: .gitignore  dev-sync.sh  hiroleague.code-workspace
.cursor/: mcp.json
.cursor/plans/: device_protocol_v2_unified_e3481457.plan.md  structured_logging_overhaul_c64498c8.plan.md
.cursor/rules/: common-utility.mdc  no-backward-compatibility.mdc
device_apps/: README.md  dev.sh  flutter_build.sh  pubspec.yaml
device_apps/ios/Runner/: GeneratedPluginRegistrant.m
device_apps/lib/: app.dart  main.dart
device_apps/lib/application/: providers.dart
device_apps/lib/application/audio/: active_audio_notifier.dart
device_apps/lib/application/auth/: auth_notifier.dart
device_apps/lib/application/messages/: message_send_notifier.dart  messages_provider.dart  recording_notifier.dart
device_apps/lib/core/constants/: app_constants.dart  app_strings.dart  storage_keys.dart
device_apps/lib/core/utils/: message_formatters.dart
device_apps/lib/data/repositories/: auth_repository_impl.dart  message_repository_impl.dart
device_apps/lib/domain/repositories/: auth_repository.dart
device_apps/lib/domain/services/: audio_recording_service.dart
device_apps/lib/features/channels/: channel_list_screen.dart
device_apps/lib/features/chat/: chat_screen.dart
device_apps/web/: index.html
diagram-gen/: generate.py
diagram-gen/sources/: agent-manager--diagram-1.mmd  architecture-overview--diagram-1.mmd  architecture-overview--diagram-2.mmd  architecture-overview--diagram-3.mmd  channel-manager--diagram-1.mmd  channel-plugin-architecture--diagram-1.mmd  channel-plugin-architecture--diagram-2.mmd  channel-plugin-architecture--diagram-3.mmd  channel-plugin-architecture--diagram-4.mmd  communication-manager--diagram-1.mmd  communication-manager--diagram-2.mmd
docs/: arch-tech-decisions.md  dev_env.md  internal_todo.md  mobile_app.md  xlogger.md
hiroserver/: pyproject.toml
hiroserver/channels/hiro-channel-devices/: README.md  pyproject.toml
hiroserver/channels/hiro-channel-devices/src/hiro_channel_devices/: main.py  plugin.py
hiroserver/channels/hiro-channel-echo/: README.md  pyproject.toml
hiroserver/channels/hiro-channel-echo/src/hiro_channel_echo/: main.py  plugin.py
hiroserver/gateway/: README.md  pyproject.toml
hiroserver/gateway/src/hirogateway/: __init__.py  auth.py  autostart.py  config.py  constants.py  instance.py  main.py  relay.py  service.py
hiroserver/hiro-channel-sdk/: README.md  pyproject.toml
hiroserver/hiro-channel-sdk/src/hiro_channel_sdk/: __init__.py  base.py  constants.py  log_setup.py  models.py  rpc.py  transport.py
hiroserver/hiro-commons/: README.md  pyproject.toml
hiroserver/hiro-commons/src/hiro_commons/: __init__.py  attestation.py  autostart.py  encoding.py  keys.py  log.py  nonces.py  process.py  signing.py  timestamps.py
hiroserver/hiro-commons/src/hiro_commons/constants/: __init__.py  domain.py  network.py  storage.py  timing.py
hiroserver/hirocli/: README.md  pyproject.toml
hiroserver/hirocli/src/hirocli/: __init__.py  autostart.py  constants.py  rpc_helpers.py
hiroserver/hirocli/src/hirocli/commands/: __init__.py  app.py  channel.py  device.py  logs.py  root.py  workspace.py
hiroserver/hirocli/src/hirocli/domain/: __init__.py  agent_config.py  channel_config.py  config.py  conversation_channel.py  conversation_log.py  crypto.py  db.py  pairing.py  workspace.py
hiroserver/hirocli/src/hirocli/runtime/: __init__.py  agent_manager.py  channel_manager.py  communication_manager.py  http_server.py  infra_event_handlers.py  server_process.py
hiroserver/hirocli/src/hirocli/runtime/adapters/: audio_adapter.py
hiroserver/hirocli/src/hirocli/services/stt/: service.py
hiroserver/hirocli/src/hirocli/tools/: __init__.py  base.py  channel.py  gateway.py  langchain_adapter.py  logs.py  registry.py  server.py  workspace.py
hiroserver/hirocli/src/hirocli/ui/: app.py  qr.py  run.py  state.py
hiroserver/hirocli/src/hirocli/ui/pages/: agents.py  channels.py  dashboard.py  devices.py  gateways.py  logs.py  workspaces.py
mintdocs/: AGENTS.md  channels.mdx  cli-storage.mdx  devices.mdx  docs.json  gateway-cli.mdx  gateway-instances.mdx  gateway-runtime.mdx  gateway-storage.mdx  general.mdx  operation.mdx  server-ops.mdx  setup-and-uninstall.mdx  tools-architecture.mdx  workspace.mdx
mintdocs/architecture/: admin-ui.mdx  agent-manager.mdx  architecture-overview.mdx  channel-manager.mdx  communication-manager.mdx  constants.mdx  device-auth.mdx  process-spawning.mdx  server-lifecycle.mdx  tools-architecture.mdx  workspace-data-store.mdx
mintdocs/architecture/plugins/: channel-plugin-architecture.mdx  creating-channel-plugins.mdx
mintdocs/hiro/: channel.mdx  cli-storage.mdx  devices.mdx  gateway-cli.mdx  gateway-instances.mdx  gateway-runtime.mdx  gateway-storage.mdx  introduction.mdx  quickstart.mdx  server-ops.mdx  setup-and-uninstall.mdx  workspace.mdx
mintdocs/phb/: channel.mdx  devices.mdx  introduction.mdx  quickstart.mdx
mobile_app/lib/: main.dart
mobile_app/lib/controllers/: app_controller.dart
phbserver/: gateway_state.json  pyproject.toml
phbserver/.gateway-state/: gateway_state.json
phbserver/channels/phb-channel-devices/: pyproject.toml
phbserver/channels/phb-channel-devices/src/phb_channel_devices/: plugin.py
phbserver/channels/phb-channel-echo/: pyproject.toml
phbserver/channels/phb-channel-echo/src/phb_channel_echo/: main.py  plugin.py
phbserver/gateway/: README.md  pyproject.toml
phbserver/gateway/src/phbgateway/: auth.py  autostart.py  config.py  instance.py  main.py  relay.py
phbserver/phb-channel-sdk/: pyproject.toml
phbserver/phb-channel-sdk/src/phb_channel_sdk/: log_setup.py  transport.py
phbserver/phb-commons/: README.md  pyproject.toml
phbserver/phb-commons/src/phb_commons/: __init__.py  attestation.py  autostart.py  encoding.py  keys.py  log.py  nonces.py  process.py  signing.py  timestamps.py
phbserver/phb-logger/: pyproject.toml
phbserver/phb-logger/src/phb_logger/: __init__.py  xlogger.py
phbserver/phbcli/: README.md  pyproject.toml
(+60 files in other folders)
