[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirogateway"
version = "0.1.0"
description = "Hiro — WebSocket relay gateway server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "websocket", "gateway", "relay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12",
    "pydantic>=2",
    "platformdirs>=4",
    "typer>=0.12",
    "rich>=13",
    "cryptography>=43",
    "hiro-channel-sdk",
    "hiro-commons",
]

[project.scripts]
hirogateway = "hirogateway.main:cli"

[tool.uv.sources]
hiro-channel-sdk = { workspace = true }
hiro-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hirogateway"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
