[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirocli"
version = "0.1.0"
description = "Hiro - desktop server CLI with WebSocket gateway client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "websocket", "gateway", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2",
    "rich>=13",
    "cryptography>=43",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=0.3",
    "platformdirs>=4",
    "aiosqlite>=0.20",
    "sqlmodel>=0.0.21",
    "nicegui>=3.0",
    "qrcode>=8.0",
    "hiro-channel-sdk",
    "hiro-commons",
    "hiro-channel-devices",
    "hirogateway",
]

[project.scripts]
hirocli = "hirocli.commands.app:app"
hiro-channel-devices = "hiro_channel_devices.main:app"

[tool.uv.sources]
hiro-channel-sdk = { workspace = true }
hiro-commons = { workspace = true }
hiro-channel-devices = { workspace = true }
hirogateway = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hirocli"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
