[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phbgateway"
version = "0.1.0"
description = "Private Home Box — WebSocket relay gateway server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "websocket", "gateway", "relay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "cryptography>=43",
    "phb-channel-sdk",
    "phb-commons",
]

[project.scripts]
phbgateway = "phbgateway.main:cli"

[tool.uv.sources]
phb-channel-sdk = { workspace = true }
phb-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/phbgateway"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
