[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phb-channel-sdk"
version = "0.1.0"
description = "Private Home Box — shared SDK and contract for channel plugins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "websocket", "plugin", "channel"]
dependencies = [
    "pydantic>=2",
    "websockets>=12",
    "phb-commons",
]

[tool.uv.sources]
phb-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/phb_channel_sdk"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
