[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phb-channel-devices"
version = "0.1.0"
description = "Private Home Box — device channel plugin bridging gateway <-> unified messages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "channel", "plugin", "devices", "gateway"]
dependencies = [
    "phb-channel-sdk",
    "websockets>=12",
    "typer>=0.12",
    "cryptography>=43",
    "phb-commons",
]

[project.scripts]
phb-channel-devices = "phb_channel_devices.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/phb_channel_devices"]

[tool.uv.sources]
phb-channel-sdk = { workspace = true }
phb-commons = { workspace = true }
