[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phb-channel-echo"
version = "0.1.0"
description = "Private Home Box — echo channel plugin for development and testing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "channel", "plugin", "echo"]
dependencies = [
    "phb-channel-sdk",
    "typer>=0.12",
    "phb-commons",
]

[project.scripts]
phb-channel-echo = "phb_channel_echo.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/phb_channel_echo"]

[tool.uv.sources]
phb-channel-sdk = { workspace = true }
phb-commons = { workspace = true }
